--- a/src/docs/asciidoc/languages/dynamic-languages.adoc
+++ b/src/docs/asciidoc/languages/dynamic-languages.adoc
@@ -504,9 +504,9 @@ Finally, the following small application exercises the preceding configuration:
 	import org.springframework.context.ApplicationContext;
 	import org.springframework.context.support.ClassPathXmlApplicationContext;
 
-	public class Main {
+	public class xin.iyue.Main {
 
-		public static void Main(String[] args) {
+		public static void xin.iyue.Main(String[] args) {
 			ApplicationContext ctx = new ClassPathXmlApplicationContext("beans.xml");
 			Calculator calc = (Calculator) ctx.getBean("calculator");
 			System.out.println(calc.add(2, 8));
